--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   /* background-color: var(--bs-body-bg); */
-  /* background-color: #000; */
+  background-color: #000;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   /* scrollbar-color: #fff #000; */
@@ -7852,8 +7852,7 @@ textarea.form-control-lg {
 
 .bg-black {
   --bs-bg-opacity: 1;
-  background-color: #000 !important;
-  /* background-color: rgba(var(--bs-black-rgb), var(--bs-bg-opacity)) !important; */
+  background-color: rgba(var(--bs-black-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-white {
